--- a/Lesson_4/convolutional-neural-networks/conv-visualization/custom_filters.ipynb
+++ b/Lesson_4/convolutional-neural-networks/conv-visualization/custom_filters.ipynb
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d034967348>"
+       "<matplotlib.image.AxesImage at 0x25437c49b48>"
       ]
      },
      "execution_count": 1,
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d0352bcfc8>"
+       "<matplotlib.image.AxesImage at 0x254385a6a88>"
       ]
      },
      "execution_count": 2,
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d037699e48>"
+       "<matplotlib.image.AxesImage at 0x25438626588>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -179,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d0384fd848>"
+       "<matplotlib.image.AxesImage at 0x2543868e708>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d03a21bac8>"
+       "<matplotlib.image.AxesImage at 0x2543893f088>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -245,16 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d039e2d208>"
+       "<matplotlib.image.AxesImage at 0x25439987f88>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d03b4b78c8>"
+       "<matplotlib.image.AxesImage at 0x254399f0bc8>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -320,6 +320,13 @@
     "\n",
     "plt.imshow(filtered_nimg, cmap='gray')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
